Added paginator to product view.

--- a/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
@@ -5,8 +5,8 @@
 {% include "ClubShopBundle:Shop:header.html.twig" %}
 {% include "ClubShopBundle:Shop:categories.html.twig" %}
 
-{% if products %}
-  {% include "ClubShopBundle:Shop:product_table.html.twig" with {'products':products} %}
+{% if paginator %}
+  {% include "ClubShopBundle:Shop:product_table.html.twig" with {'paginator':paginator} %}
 {% endif %}
 
 {% endblock %}
