--- a/src/Club/LayoutBundle/Resources/views/Default/login_form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/login_form.html.twig
@@ -7,6 +7,7 @@
                     <legend>{% trans %}Login{% endtrans %}</legend>
                     <p><input class="span12" type="text" name="_username" id="login_username" placeholder="{% trans %}Member number{% endtrans %}" autofocus /></p>
                     <p><input class="span12" type="password" name="_password" placeholder="{% trans %}Password{% endtrans %}" /></p>
+                    <p><a href="{{ path('auth_forgot') }}">{% trans %}Forgot password?{% endtrans %}</a></p>
                     <p><button type="submit" class="btn btn-primary">{% trans %}Login{% endtrans %}</button></p>
                 </fieldset>
 
