Fixed new style of render.

--- a/src/Club/RankingBundle/Resources/views/Ranking/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/index.html.twig
@@ -4,7 +4,7 @@
 
 {% for ranking in rankings %}
   <h3><a href="{{ path('club_ranking_ranking_show', {'id':ranking.id}) }}">{{ ranking.name }}</a></h3>
-  {% render "ClubRankingBundle:Ranking:Top" with {'id':ranking.id, 'limit':ranking_view_top} %}
+  {% render(controller("ClubRankingBundle:Ranking:Top", {'id':ranking.id, 'limit':ranking_view_top})) %}
 
 {% else %}
 <table class="table">
