--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
@@ -18,6 +18,7 @@
   {{ form_row(form.allowed_pauses) }}
   {{ form_row(form.booking) }}
   {{ form_row(form.team) }}
+  {{ form_row(form.only_member) }}
   {{ form_row(form.start_time) }}
   {{ form_row(form.stop_time) }}
   {{ form_row(form.location) }}
