--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -29,6 +29,7 @@
 {% block header %}
 <div class="page-header">
     <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/time.png') }}" /> <a href="{{ path('club_booking_location_index') }}">{{ location.locationName }}</a> <small>{{ date|club_date('full') }}</small></h1>
+    <small>{% trans %}Click on the name to change location.{% endtrans %}</small>
 </div>
 {% endblock %}
 
