Buy unique products per user.

--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/form.html.twig
@@ -1,6 +1,7 @@
 <fieldset>
   <legend>{% trans %}Product attributes{% endtrans %}</legend>
   {{ form_row(form.only_member) }}
+  {{ form_row(form.amount_per_member) }}
 
 </fieldset>
 
