Added cursor on new user blocks.

--- a/src/Club/UserBundle/Resources/views/Auth/signin.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/signin.html.twig
@@ -43,7 +43,7 @@ $(document).ready(function() {
 </div>
 
 <div class="well">
-    <legend id="click-new-member"><img id="new-member-img" src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_out.png') }}" /> {% trans %}New member{% endtrans %}</legend>
+    <legend class="pointer" id="click-new-member"><img id="new-member-img" src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_out.png') }}" /> {% trans %}New member{% endtrans %}</legend>
 
     <div id="new-member-box-invert">
         <p>{% trans %}Click on the icon above if you are a new member, and wants to join the club.{% endtrans %}</p>
@@ -84,7 +84,7 @@ $(document).ready(function() {
 </div>
 
 <div class="well">
-    <legend id="click-guest"><img id="guest-img" src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_out.png') }}" /> {% trans %}Pay as guest{% endtrans %}</legend>
+    <legend class="pointer" id="click-guest"><img id="guest-img" src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_out.png') }}" /> {% trans %}Pay as guest{% endtrans %}</legend>
 
     <div id="guest-box-invert">
         <p>{% trans %}Click on the icon above if you are a new member, and wants to join the club.{% endtrans %}</p>
