--- a/src/Club/UserBundle/Resources/views/Auth/signin.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/signin.html.twig
@@ -99,7 +99,7 @@ $(document).ready(function() {
     <legend class="pointer" id="click-guest"><img id="guest-img" src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_out.png') }}" /> {% trans %}Pay as guest{% endtrans %}</legend>
 
     <div id="guest-box-invert">
-        <p>{% trans %}Click on the icon above if you are a new member, and wants to join the club.{% endtrans %}</p>
+        <p>{% trans %}Click on the icon above if you want to make a once time purchage.{% endtrans %}</p>
     </div>
     <div id="guest-box">
     <p>{% trans %}If you have never used our shop before, just enter your details here.{% endtrans %}</p>
