--- a/src/Club/UserBundle/Resources/views/Auth/signin.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/signin.html.twig
@@ -102,7 +102,7 @@ $(document).ready(function() {
         <p>{% trans %}Click on the icon above if you want to make a once time purchage.{% endtrans %}</p>
     </div>
     <div id="guest-box">
-    <p>{% trans %}If you have never used our shop before, just enter your details here.{% endtrans %}</p>
+    <p>{% trans %}Enter you personal information here, to complete your purchase.{% endtrans %}</p>
     <form method="POST" action="{{ path('club_user_auth_signin') }}" class="form-horizontal">
     <legend>{% trans %}Personal Information{% endtrans %}</legend>
 
