Made unattend from a booking., and add more players.

--- a/src/Club/BookingBundle/Resources/views/Booking/cancel_form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/cancel_form.html.twig
@@ -1,11 +1,14 @@
-<div class="row-fluid">
     <div class="span6">
         <div class="well">
 
-            <h3>{% trans %}Delete{% endtrans %}</h3>
-            <p>{% trans %}Click here to cancel your booking.{% endtrans %}</p>
-            {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_booking_cancel', {'id':booking.id}), 'button':'Cancel'|trans} %}
+            <h3>{% trans %}Cancel booking{% endtrans %}</h3>
+            <p>{% trans %}If you want to remove the booking click <b>Remove booking</b>, else if you just want to unattend the booking simply click <b>Unattend</b>, remember that there has to be at least two players left to keep the booking, and you cannot unattend if you have created the booking.{% endtrans %}</p>
+
+            <a class="btn btn-primary" href="{{ path('club_booking_booking_cancel', {'id':booking.id}) }}">{% trans %}Remove booking{% endtrans %}</a>
+
+            {% if app.user != booking.user %}
+            <a class="btn btn-primary" href="{{ path('club_booking_booking_unattend', {'id':booking.id}) }}">{% trans %}Unattend{% endtrans %}</a>
+            {% endif %}
 
         </div>
     </div>
-</div>
