Upgraded symfony Added color to booking plans

--- a/src/Club/BookingBundle/Resources/views/AdminPlan/form.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/form.html.twig
@@ -2,6 +2,7 @@
 
     {{ form_row(form.name) }}
     {{ form_row(form.description) }}
+    {{ form_row(form.color) }}
     {{ form_row(form.fields) }}
     {{ form_row(form.start) }}
     {{ form_row(form.end) }}
