Added dynamic value for default location in kiosk.

--- a/src/Club/KioskBundle/Resources/views/Kiosk/index.html.twig
+++ b/src/Club/KioskBundle/Resources/views/Kiosk/index.html.twig
@@ -19,7 +19,7 @@
 <script type="text/javascript" src="{{ asset('bundles/clubkiosk/plugins/jquery.li-scroller.1.0.js') }}"></script>
 
 <script>
-var defaultLocale = {{ defaultLocale }};
+var defaultLocation = {{ defaultLocation }};
 var apiUrl = "{{ url('homepage') }}api/";
 </script>
 {% javascripts
