--- a/src/Club/KioskBundle/Resources/public/style.css
+++ b/src/Club/KioskBundle/Resources/public/style.css
@@ -1,12 +1,10 @@
 body {
-  background-image: url('images/bg4.png');
-  background-repeat: repeat;
   display: -webkit-box;
   -webkit-box-pack: center;
   -webkit-box-align: start;
-
+  -webkit-user-select: none;
+  -khtml-user-select: none;
   overflow: hidden;
-
   margin: 0;
   padding: 0;
   font-family: Verdana,Arial,sans-serif;
@@ -170,9 +168,6 @@ label {
 #loadmask {
   width: 100%;
   height: 100%;
-  background-image: url('./images/loading.gif');
-  background-repeat: no-repeat;
-  background-position: center;
   z-index: 2000;
 }
 
@@ -216,4 +211,21 @@ div.tickeroverlay {
   border-top: 1px #000000 solid;
   color: #000000;
   padding: 2px;
+}
+
+img#refresh_image {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    z-index: 5000;
+}
+.ui-keyboard-button {
+    height: 4em;
+    width: 4em;
+}
+.ui-keyboard-space {
+    width: 15em;
+}
+.ui-keyboard-enter {
+    width: 6em;
 }
