--- a/src/Club/ShopBundle/Resources/views/AdminProduct/new.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProduct/new.html.twig
@@ -1,5 +1,5 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
 {% block body %}
-{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_shop_product_new')} %}
+{% include "ClubShopBundle:AdminProduct:form.html.twig" %}
 {% endblock %}
