Added documents to specific user.

--- a/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
@@ -10,6 +10,7 @@
             <li><a href="{{ path('club_user_adminuserbooking_index', { 'id':user.id }) }}">{% trans %}Bookings{% endtrans %}</a></li>
             <li><a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}">{% trans %}Shop as{% endtrans %}</a></li>
             <li><a href="{{ path('club_user_adminuser_log', { 'id':user.id }) }}">{% trans %}Log{% endtrans %}</a></li>
+            <li><a href="{{ path('admin_user_document', { 'id':user.id }) }}">{% trans %}Document{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
