--- a/src/Club/UserBundle/Resources/views/AdminUserDocument/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUserDocument/index.html.twig
@@ -24,7 +24,7 @@
     {% for entity in entities %}
     <tr>
         <td><a href="{{ asset(entity.webPath) }}" target="_open">{{ entity.name }}</a></td>
-        <td>{{ entity.size }}</td>
+        <td>{{ entity.size|club_filesize }}</td>
         <td>
             {% include "ClubLayoutBundle:Default:download_link.html.twig" with {'url':asset(entity.webPath)} %}
             {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_user_document_delete', { 'user_id':user.id,'id':entity.id })} %}
